platform/policy/kyverno/tests/probes-liveness-reasonable-thresholds/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno-probes-thresholds
  labels:
    infra.k8/tier: staging
