platform/policy/kyverno/tests/probes-liveness-reasonable-thresholds/chainsaw-test.yml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: probes-liveness-reasonable-thresholds-valid
spec:
  concurrent: false
  skipDelete: false
  steps:
    - try:
        - apply:
            file: ../../probes-liveness-reasonable-thresholds.yaml
    - try:
        - apply:
            file: ./namespace.yml
    - try:
        - apply:
            file: ./valid-pod.yml
            expect:
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: probes-thresholds-valid
                    namespace: kyverno-probes-thresholds
                check:
                  ($error == null): true
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: probes-liveness-reasonable-thresholds-invalid
spec:
  concurrent: false
  skipDelete: false
  steps:
    - try:
        - apply:
            file: ../../probes-liveness-reasonable-thresholds.yaml
    - try:
        - apply:
            file: ./namespace.yml
    - try:
        - apply:
            file: ./invalid-pod.yml
            expect:
              - match:
                  apiVersion: v1
                  kind: Pod
                  metadata:
                    name: probes-thresholds-invalid
                    namespace: kyverno-probes-thresholds
                check:
                  ($error != null): true
                  (contains($error, 'Liveness probes must allow at least 5s')): true
